Patched footer broken links

--- a/tree/foot-l3.html
+++ b/tree/foot-l3.html
@@ -4,12 +4,9 @@
         <div class="about">
             <ul>
                 <h4>About</h4>
-                <li><a href="contact">Contact</a></li>
+                <li><a href="./../contact.php">Contact</a></li>
                 <li><a href=".././equipment.php">See our Equipment</a></li>
-                <li><a href="why-unison">Why Unison?</a></li>
                 <li><a href="https://unisonengineering.wufoo.com/forms/subscribe/">Subscribe to the Unison Newsletter</a></li>
-                <li><a href="data-protection">Privacy Policy</a></li>
-                <li><a href="history">Our History</a></li>
             </ul>
             <div>
                 <h6>Social Media</h6>
@@ -32,15 +29,11 @@
                 V94 E3W2<br />
                 Ireland.
             </address>
-            <!--<div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3874.2222595708404!2d-8.601839983446434!3d52.64848421684296!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2d183120b1acd746!2sUnison+Engineering+Services+Limited!5e0!3m2!1sen!2sie!4v1496924712421" width="200" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>-->
                 
             <h6>Email</h6>
                 <p>info@unisonengineering.ie</p>
             <h6>Phone</h6>
                 <p><a href="tel:35361422224">+353 61 422 224</a></p>
-           <!--  <h4><a href="https://unisonengineering.wufoo.com/forms/q1msei2g15sz6z0/" target="_blank">Get a Quote Now</a></h4> -->
         </div>
         <div class="newsletter">
             <h4>Subscribe to our newsletter</h4>
