--- a/footer.html
+++ b/footer.html
@@ -4,8 +4,8 @@
         <div class="about">
             <ul>
                 <h4>About</h4>
-                <li><a href="contact">Contact</a></li>
-                <li><a href="./equipment">See our Equipment</a></li>
+                <li><a href="./contact.php">Contact</a></li>
+                <li><a href="./equipment.php">See our Equipment</a></li>
                 <li><a href="https://unisonengineering.wufoo.com/forms/subscribe/">Subscribe to the Unison Newsletter</a></li>
             </ul>
             <div>
@@ -28,16 +28,11 @@
                 Limerick.<br />
                 V94 E3W2<br />
                 Ireland.
-            </address>
-            <!--<div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3874.2222595708404!2d-8.601839983446434!3d52.64848421684296!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2d183120b1acd746!2sUnison+Engineering+Services+Limited!5e0!3m2!1sen!2sie!4v1496924712421" width="200" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>-->
-                
+            </address>      
             <h6>Email</h6>
                 <p>info@unisonengineering.ie</p>
             <h6>Phone</h6>
                 <p><a href="tel:35361422224">+353 61 422 224</a></p>
-           <!--  <h4><a href="https://unisonengineering.wufoo.com/forms/q1msei2g15sz6z0/" target="_blank">Get a Quote Now</a></h4> -->
         </div>
         <div class="newsletter">
             <h4>Subscribe to our newsletter</h4>
