New ECA Disinfectant Product and Covid-19 update
Large update: Significant changes noted below.

Short summary: Added new content to reflect Covid-19 global pandemic and product Unison make that can sanitise this. Also addressed some UI annoyances and made some UX improvements. formatted code and implemented a minified css sheet for production build.

When: 5 - 11 May 2020

File(s):

New:

Covid Banner banner below nav on most pages throughout the site. Goal is to tell users what the company are doing re: coronavirus.
Covid Banner (L2) see above
Covid Banner (L3) see above
ECA Disinfectant Same format as equipment & products. Sselection page for information articles about ECA Water.
About ECA (article) New article format.
Avian Influenza (article) New article format.
Coronavirus Covid-19 (article) New article format.
Validation (article) New article format.
Updated

Contact form mailer Formatting - Spacing for readability on lines 3, 23, 25.
Equipment & Products
Line #7 Updated title to reflect that this page now shows products (On the basis that ECA Water is not equipment)
Line #13 Added covid-banner component
Line #18 Code Formatting (space). h1 now reads "Equipment '& Products'"
Line #19 Added max-width property on p for UX (paragraph lines should be no longer than ~70 characters to prevent readibility confusion). Updated description to reflect new ECA product.
Line #29 Shortened description
Line #31 Improved copy on call to action
Line #41 Shortened description
Line #43 Improved copy on call to action
Line #44-53 New card for ECA fluid
Line #62-64 Formatting & Grammar improvement
Line #75 Shortened description
Line #77 Improved copy on call to action
Line #87 Shortened description
Line #89 Improved copy on call to action
Line #99 Shortened description
Line #101 Improved copy on call to action
Equipment List (component) Formatting, Line #10-12 added ECA Disinfectant
Footer #49 Line Formatting & comment.
Footer L2 Formatting, comment & adding mailchimp signup.
Foo

--- a/equipment/equipment-list.html
+++ b/equipment/equipment-list.html
@@ -1,26 +1,26 @@
 <div class="equipment-nav col-md-3 py-2">
-    <ul>
-      <h5 class="my-3">See more of our Equipment</h5>
-      <a href="./homogenisers.php">
-        <li>
-         <!--  <div class="col-8"> -->Homogenisers<!-- </div>
-          <div class="col-4"><img style="max-height:100%;max-width:100%;" src="../img/homogeniser-hl6.png"/></div> -->
-        </li>
-      </a>
-      <a href="./pasteurisers.php">
-        <li>Pasteurizers</li>
-      </a>
-      <a href="./heat-exchangers.php">
-        <li>Heat Exchangers</li>
-      </a>
-      <a href="./valves.php">
-        <li>Valves</li>
-      </a>
-      <a href="./pumps.php">
-        <li>Pumps</li>
-      </a>
-      <a href="./other.php">
-        <li>Other Equipment</li>
-      </a>
-    </ul>
+  <ul>
+    <h5 class="my-3">More Equipment &amp; Products</h5>
+    <a href="./homogenisers.php">
+      <li>Homogenisers</li>
+    </a>
+    <a href="./pasteurisers.php">
+      <li>Pasteurizers</li>
+    </a>
+    <a href="./eca-disinfectant.php">
+      <li>ECA Disinfectant</li>
+    </a>
+    <a href="./heat-exchangers.php">
+      <li>Heat Exchangers</li>
+    </a>
+    <a href="./valves.php">
+      <li>Valves</li>
+    </a>
+    <a href="./pumps.php">
+      <li>Pumps</li>
+    </a>
+    <a href="./other.php">
+      <li>Other Equipment</li>
+    </a>
+  </ul>
 </div>
