--- a/footer.html
+++ b/footer.html
@@ -46,7 +46,7 @@
             </form>
             <!--End mc_embed_signup-->
         </div>
-</div>
+      </div> <!-- Left align copyright info -->
         <div class="container-no-top" id="copyright-bottom">
             <p><strong>&copy; <text id="yr"></text> Unison Engineering Services Limited.</strong><br>Registered in Ireland. <br>Company Registration Number: 419201.<br></p>
         </div>
