--- a/head.html
+++ b/head.html
@@ -1,16 +1,26 @@
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="noodp">
-    <meta property="og:determiner" content="" />
-    <meta property="og:locale" content="en_IE" />
-    <meta property="og:locale:alternate" content="en_GB" />
-    <meta property="og:locale:alternate" content="en_US" />
-    <meta property="og:site_name" content="Unison Engineering Services Limited" />
-    <meta property="og:image" content="https://www.unisonengineering.ie/img/og-sharing.jpg" />
-    <meta property="og:url" content="https://www.unisonengineering.ie/">
-    <link rel="shortcut icon" href="https://www.unisonengineering.ie/img/200Favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=Biryani:300,700|Titillium+Web:700,400&display=swap" rel="stylesheet">
-    <!--Google Analytics-->     
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="robots" content="noodp" />
+<meta property="og:determiner" content="" />
+<meta property="og:locale" content="en_IE" />
+<meta property="og:locale:alternate" content="en_GB" />
+<meta property="og:locale:alternate" content="en_US" />
+<meta property="og:site_name" content="Unison Engineering Services Limited" />
+<meta
+  property="og:image"
+  content="https://www.unisonengineering.ie/img/og-sharing.jpg"
+/>
+<meta property="og:url" content="https://www.unisonengineering.ie/" />
+<link
+  rel="shortcut icon"
+  href="https://www.unisonengineering.ie/img/200Favicon.png"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Biryani:300,700|Titillium+Web:400,700|Lato:300,400,700&display=swap"
+  rel="stylesheet"
+/>
+<!--Google Analytics-->
+<!--   
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -18,4 +28,5 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-103814700-1', 'auto');
     ga('send', 'pageview');
-    </script>
+    </script> 
+UNDO COMMENT FOR LIVE-->
