--- a/tree/foot-l2.html
+++ b/tree/foot-l2.html
@@ -36,16 +36,21 @@
         </div>
         <div class="newsletter">
             <h4>Subscribe to our newsletter</h4>
-            <input placeholder="Enter your email address here" style="width:80%;height:30px;padding:5px;">
-            <button class="main-button" style="font-size:1rem; margin:20px 0;">Subscribe</button>
+            <!-- Begin Mailchimp Signup Form -->
+            <form action="https://unisonengineering.us16.list-manage.com/subscribe/post?u=0d0c93b126c74d4c26c3ee4c5&amp;id=9b1a364aaf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <input placeholder="Enter your email address here" style="width:80%;height:30px;padding:5px;" type="email" value="" name="EMAIL">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0d0c93b126c74d4c26c3ee4c5_9b1a364aaf" tabindex="-1" value=""></div>
+                <!--  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> -->
+                <button class="main-button" type="sumbit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" style="font-size:1rem; margin:20px 0;">Subscribe</button>
+            </form>
+            <!--End mc_embed_signup-->
         </div>
-</div>
+    </div> <!-- Left align copyright info -->
         <div class="container-no-top" id="copyright-bottom">
             <p><strong>&copy; <text id="yr"></text> Unison Engineering Services Limited.</strong><br>Registered in Ireland. <br>Company Registration Number: 419201.<br></p>
         </div>
     </footer>
     </div>
-</div>
 <script>function currentYear() {let d = new Date();let y = d.getFullYear();document.getElementById("yr").innerHTML = y;}currentYear();</script>
-<script>
-/*For nav: on scroll, bring in shadow*/window.onscroll = function() {scrollFunction()};function scrollFunction() {if(document.body.scrollTop > 80 || document.documentElement.scrollTop > 80){document.getElementById("nav").style.boxShadow = "0 -5px 10px var(--dark-3)";} else {document.getElementById("nav").style.boxShadow = "0 0 0 var(--light-main)";}}</script>
+<script>/*For nav: on scroll, bring in shadow*/window.onscroll = function() {scrollFunction()};function scrollFunction() {if(document.body.scrollTop > 80 || document.documentElement.scrollTop > 80){document.getElementById("nav").style.boxShadow = "0 -5px 10px var(--dark-3)";} else {document.getElementById("nav").style.boxShadow = "0 0 0 var(--light-main)";}}</script>
