--- a/tree/foot-l3.html
+++ b/tree/foot-l3.html
@@ -4,16 +4,16 @@
         <div class="about">
             <ul>
                 <h4>About</h4>
-                <li><a href="./../contact.php">Contact</a></li>
-                <li><a href=".././equipment.php">See our Equipment</a></li>
+                <li><a href="../../contact.php">Contact</a></li>
+                <li><a href="../../equipment.php">See our Equipment</a></li>
                 <li><a href="https://unisonengineering.wufoo.com/forms/subscribe/">Subscribe to the Unison Newsletter</a></li>
             </ul>
             <div>
                 <h6>Social Media</h6>
                     <span class="social-icons">
-                        <a href="https://www.twitter.com/unisonengltd/" target="blank"><img src="../img/Twitter.png" alt="Unison Twitter" style="max-width:30px"></a>
-                        <a href="https://www.facebook.com/unisonengineering/" target="blank"><img src="../img/Facebook.png" alt="Unison Facebook" style="max-width:30px"></a>
-                        <a href="https://www.linkedin.com/company/unisonengineering/" target="blank"><img src="../img/LinkedIn.png" alt="Unison LinkedIn" style="max-width:30px"></a>
+                        <a href="https://www.twitter.com/unisonengltd/" target="blank"><img src="../../img/Twitter.png" alt="Unison Twitter" style="max-width:30px"></a>
+                        <a href="https://www.facebook.com/unisonengineering/" target="blank"><img src="../../img/Facebook.png" alt="Unison Facebook" style="max-width:30px"></a>
+                        <a href="https://www.linkedin.com/company/unisonengineering/" target="blank"><img src="../../img/LinkedIn.png" alt="Unison LinkedIn" style="max-width:30px"></a>
                     </span>
             </div>
         </div>
@@ -37,15 +37,21 @@
         </div>
         <div class="newsletter">
             <h4>Subscribe to our newsletter</h4>
-            <input placeholder="Enter your email address here" style="width:80%;height:30px;padding:5px;">
-            <button class="main-button" style="font-size:1rem; margin:20px 0;">Subscribe</button>
+            <!-- Begin Mailchimp Signup Form -->
+            <form action="https://unisonengineering.us16.list-manage.com/subscribe/post?u=0d0c93b126c74d4c26c3ee4c5&amp;id=9b1a364aaf" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <input placeholder="Enter your email address here" style="width:80%;height:30px;padding:5px;" type="email" value="" name="EMAIL">
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_0d0c93b126c74d4c26c3ee4c5_9b1a364aaf" tabindex="-1" value=""></div>
+                <!--  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> -->
+                <button class="main-button" type="sumbit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" style="font-size:1rem; margin:20px 0;">Subscribe</button>
+            </form>
+            <!--End mc_embed_signup-->
         </div>
-</div>
-        <div class="container-no-top" id="copyright-bottom">
-            <p><strong>&copy; <text id="yr"></text> Unison Engineering Services Limited.</strong><br>Registered in Ireland. <br>Company Registration Number: 419201.<br></p>
-        </div>
-    </footer>
+    </div> <!-- Left align copyright info -->
+    <div class="container-no-top" id="copyright-bottom">
+        <p><strong>&copy; <text id="yr"></text> Unison Engineering Services Limited.</strong><br>Registered in Ireland. <br>Company Registration Number: 419201.<br></p>
     </div>
+</footer>
 </div>
 <script>function currentYear() {let d = new Date();let y = d.getFullYear();document.getElementById("yr").innerHTML = y;}currentYear();</script>
 <script>
