--- a/tree/nav-l2.html
+++ b/tree/nav-l2.html
@@ -1,43 +1,50 @@
-<nav id="nav" style="box-sizing: border-box">
-        <!-- logo -->
-        <span id="logo">
-            <a href="../"><img id="logoUnison" loading="eager" src="../img/unisonlogo.png" alt="Unison Engineering Services Limited branding" width="450px"></a>
-        </span>
-        <!-- navbar -->
-        <button class="collapsible" id="nav-button">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
-                    <rect x="5" y="10" width="20" height="1"/>
-                    <rect x="5" y="20" width="20" height="1"/>
-                  </svg>    
-            Menu
-        </button>
-        <ul id="nav-right">
-            <div class="collapsible">
-                <div class="nav-content">
-                <li><a href="../">Home</a></li>
-                <li><a href="../equipment.php">Equipment</a></li>
-                <li><a href="../service.php">Service</a></li>
-                <li><a href="../testing.php">Integrity Testing</a></li>
-                <li><a href="../spares.php">Spares</a></li>
-                <li><a href="../contact.php">Contact</a></li>
-                </div>
-            </div>
-        </ul>
-    </nav>
-    
-    <script>
-    var collapse = document.getElementsByClassName("collapsible");
-    var i;
-    
-    for (i = 0; i < collapse.length; i++) {
-      collapse[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var navContent = this.nextElementSibling;
-        if (navContent.style.display === "block") {
-          navContent.style.display = "none";
-        } else {
-          navContent.style.display = "block";
-        }
-      });
-    }
-    </script>
+<nav id="nav" style="box-sizing: border-box;">
+  <div class="nav-content">
+    <span id="logo">
+      <a href="../"
+        ><img
+          id="logoUnison"
+          loading="eager"
+          src="../img/unisonlogo.png"
+          alt="Unison Engineering Services Limited branding"
+          width="450px"
+      /></a>
+    </span>
+    <button class="collapsible" id="nav-button">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30">
+        <rect x="5" y="10" width="20" height="1" />
+        <rect x="5" y="20" width="20" height="1" />
+      </svg>
+      Menu
+    </button>
+    <ul id="nav-right">
+      <div class="collapsible">
+        <div class="nav-content">
+          <li><a href="../">Home</a></li>
+          <li><a href="../equipment.php">Equipment</a></li>
+          <li><a href="../service.php">Service</a></li>
+          <li><a href="../testing.php">Integrity Testing</a></li>
+          <li><a href="../spares.php">Spares</a></li>
+          <li><a href="../contact.php">Contact</a></li>
+        </div>
+      </div>
+    </ul>
+  </div>
+</nav>
+
+<script>
+  var collapse = document.getElementsByClassName("collapsible");
+  var i;
+
+  for (i = 0; i < collapse.length; i++) {
+    collapse[i].addEventListener("click", function () {
+      this.classList.toggle("active");
+      var navContent = this.nextElementSibling;
+      if (navContent.style.display === "block") {
+        navContent.style.display = "none";
+      } else {
+        navContent.style.display = "block";
+      }
+    });
+  }
+</script>
