Content alterations + general improvements

--- a/not_found.html
+++ b/not_found.html
@@ -153,7 +153,7 @@
             >?
           </h1>
           <img
-            src="https://www.unisonengineering.ie/img/hero-image@1x.png"
+            src="https://www.unisonengineering.ie/img/hero-image@0,2x.png"
             loading="eager"
             alt="Unison Compact Pasteurizer"
           />
@@ -343,9 +343,9 @@
         <div class="about">
           <ul>
             <h4>About</h4>
-            <li><a href="contact">Contact</a></li>
+            <li><a href="./contact.php">Contact</a></li>
             <li>
-              <a href="https://www.unisonengineering.ie/equipment"
+              <a href="https://www.unisonengineering.ie/equipment.php"
                 >See our Equipment</a
               >
             </li>
